# wrist_voice_demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
docs/: turn-taking.md
src/: agent.py  broadcast.py  console.py  deep_agent.py  editor_agent.py  exa_tools.py  initial_deck.py  markdown_ops.py  server.py  slide_agent.py  slide_ops.py  web_tools.py
src/turn/: __init__.py  flux_stt.py  manager.py  metalog.py  patches.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/api/deck/: route.ts
web/app/api/files/: route.ts
web/app/api/scripts/: route.ts
web/app/api/token/: route.ts
web/app/api/workspaces/: route.ts
web/components/: AppContext.tsx  BottomControlBar.tsx  FileSidebar.tsx  MainContent.tsx  MarkdownEditor.tsx  PreRoomConfig.tsx  ReasoningPanel.tsx  SearchResults.tsx  SlideViewer.tsx  TabBar.tsx  VoicePanel.tsx  WebViewer.tsx
web/lib/: protocol.ts  slideUtils.ts  slides.ts
